# pronto

.github/workflows/: ci.yaml
pronto_core/: CMakeLists.txt  package.xml
pronto_core/src/: rbis.cpp
pronto_msgs/: CMakeLists.txt  package.xml
pronto_msgs/msg/: BipedForceTorqueSensors.msg  ControllerFootContact.msg  FilterState.msg  GPSData.msg  IndexedMeasurement.msg  JointStateWithAcceleration.msg  LidarOdometryUpdate.msg  QuadrupedForceTorqueSensors.msg  QuadrupedStance.msg  VelocityWithSigmaBounds.msg  VisualOdometryUpdate.msg
pronto_quadruped/: CMakeLists.txt  ConfigExtras.cmake  package.xml
pronto_quadruped/src/: ImuBiasLock.cpp  LegOdometer.cpp
pronto_quadruped_commons/: CMakeLists.txt  package.xml
pronto_quadruped_commons/include/pronto_quadruped_commons/: declarations.h
pronto_quadruped_commons/include/pronto_quadruped_commons/geometry/: algebra.h
pronto_quadruped_ros/: CMakeLists.txt  package.xml
pronto_quadruped_ros/include/pronto_quadruped_ros/: bias_lock_handler_ros.hpp  conversions.hpp  dynamic_stance_estimator_ros.hpp  foot_sensor_stance_detector_ros.hpp  force_sensor_stance_estimator_ros.hpp  leg_odometer_ros.hpp  legodo_handler_ros.hpp  stance_estimator_ros.hpp
pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  conversions.cpp  dynamic_stance_estimator_ros.cpp  force_sensor_stance_estimator_ros.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  stance_estimator_ros.cpp
pronto_ros/: CMakeLists.txt  package.xml
pronto_ros/include/pronto_ros/: gps_ros_handler.hpp  index_meas_ros_handler.hpp  init_message_ros_handler.hpp  ins_ros_handler.hpp  lidar_odometry_ros_handler.hpp  pose_msg_ros_handler.hpp  pronto_node.hpp  pronto_ros_conversions.hpp  ros_frontend.hpp  scan_matcher_ros_handler.hpp  vicon_ros_handler.hpp  visual_odometry_ros_handler.hpp
pronto_ros/src/: gps_ros_handler.cpp  index_meas_ros_handler.cpp  init_message_ros_handler.cpp  ins_ros_handler.cpp  lidar_odom_viz.cpp  lidar_odometry_ros_handler.cpp  pose_msg_ros_handler.cpp  pronto_ros_conversions.cpp  pronto_ros_node.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp  vicon_ros_handler.cpp  visual_odometry_ros_handler.cpp
pronto_utils/: CMakeLists.txt  package.xml
