<?xml version="1.0"?>
<package format="3">
  <name>pronto_core</name>
  <version>0.3.0</version>
  <description>
    The pronto_core package contains the EKF and the main 
    modules to perform state estimation, including: inertial, gps, optical
    flow, etc.
  </description>

  <author email="abry@mit.edu">Adam Bry</author>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
