<?xml version="1.0"?>
<package format="3">
  <name>pronto_msgs</name>
  <version>0.3.0</version>

  <description>
	  The pronto_msgs package contains common message types used by the
	  Pronto state estimator.
  </description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
