<?xml version="1.0"?>
<package format="3">
  <name>pronto_quadruped</name>
  <version>0.3.0</version>
  <description>The pronto_quadruped package</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>pronto_quadruped_commons</depend>
  <depend>pronto_core</depend>
  <depend>pronto_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
