<?xml version="1.0"?>
<package format="2">
  <name>pronto_quadruped_ros</name>
  <version>0.3.0</version>
  <description>The pronto_quadruped_ros package</description>

  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <url type="repository">https://github.com/ori-drs/pronto</url>

  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>rclcpp</depend>
  <depend>pronto_core</depend>
  <depend>pronto_ros</depend>
  <depend>pronto_quadruped</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pronto_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
