<?xml version="1.0"?>
<package format="3">
  <name>pronto_ros</name>
  <version>0.3.0</version>
  <description>The pronto_ros package</description>

  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pronto_core</depend>
  <depend>pronto_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
