<?xml version="1.0"?>
<package format="3">
  <name>pronto_utils</name>
  <version>0.3.0</version>
  <description>Utility package for pronto library</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>

  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <license>LGPLv2.1</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
